--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -288,13 +288,13 @@ ul li {
 .navbar-toggle .icon-bar {
   background-color: #fff;
 }
-
+*/
 .navbar-solid {
-  background-color: #000 !important;
-  padding: 0 !important;
+  background-color: #000;
+  padding: 0;
   -webkit-transition: all 0.2s linear 0s;
           transition: all 0.2s linear 0s;
-}*/
+}
 
 .site-branding {
   float: left;
