--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -317,8 +317,9 @@ ul li {
  */
 .site-header {
   width: 100%;
-  height: 100%;
-  min-height: 100vh;
+  height: 60%;
+  min-height: 60vh;
+  max-height: 60vh;
   position: relative;
   text-align: center;
   background: url(../images/backgrounds/header.jpg) no-repeat center center/cover;
@@ -343,7 +344,7 @@ ul li {
   padding: 0 15px;
   display: table-cell;
   vertical-align: middle;
-  height: 80vh;
+  height: 60vh;
 }
 .site-header .intro h2 {
   margin-top: 0px;
