--- a/assets/css/other.css
+++ b/assets/css/other.css
@@ -48,3 +48,20 @@ body{
 .insider-p{
 	font-size: 28px;
 }
+
+#about{
+	font-family: 'Montserrat', sans-serif;
+	font-size: 2em;
+	justify-content: center;
+	min-height: 100vh;
+}
+
+ .transparent{
+    border-width: 0px;
+    -webkit-box-shadow: 0px 0px;
+    box-shadow: 0px 0px;
+    background-color: rgba(0,0,0,0.0);
+    background-image: -webkit-gradient(linear, 50.00% 0.00%, 50.00% 100.00%, color-stop( 0% , rgba(0,0,0,0.00)),color-stop( 100% , rgba(0,0,0,0.00)));
+    background-image: -webkit-linear-gradient(270deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 50%);
+    background-image: linear-gradient(180deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%);
+}
