--- a/assets/css/other.css
+++ b/assets/css/other.css
@@ -16,8 +16,8 @@
 }
 
 .scrolling-image-gallery{
-	height: 30vh;
-	width: 45vh;
+	height: 36vh;
+	width: 64vh;
 	border: 1px double black;
 	background-color: lightgray;
 }
@@ -54,6 +54,9 @@
 	min-height: 100vh;
 }
 
+.section{
+	min-height: 100vh;
+}
 
 
 /******************NAVBAR TRANSPARENT CLASS *******************/
