--- a/assets/css/other.css
+++ b/assets/css/other.css
@@ -20,6 +20,7 @@
 	width: 64vh;
 	border: 1px double black;
 	background-color: lightgray;
+	padding: 10;
 }
 
 #image-to-be-changed{
@@ -33,6 +34,7 @@
 
 .services{
 	background-color: #ed4315;
+	min-height: 100vh;
 }
 
 .service-icon-holder{
@@ -54,9 +56,13 @@
 	min-height: 100vh;
 }
 
-.section{
-	min-height: 100vh;
+#our-story{
+	font-size: 1.5em;
 }
+
+/*.section{
+	min-height: 100vh;
+}*/
 
 
 /******************NAVBAR TRANSPARENT CLASS *******************/
