--- a/assets/css/other.css
+++ b/assets/css/other.css
@@ -54,8 +54,7 @@ html{
 
 #about{
 	font-family: 'Montserrat', sans-serif;
-	font-size: 2em;
-	justify-content: center;
+	font-size: 1.3em;;
 	min-height: 100vh;
 }
 
@@ -89,6 +88,27 @@ html{
 	color: #e83f1e;
 	font-size: 1.2em;
 	font-weight: 500;
+	margin: 5%;
+}
+
+
+/* 
+*Event links
+*/
+
+#whats-new{
+	min-height: 20vh;
+	background-color: black;
+	vertical-align: center;
+}
+
+
+.event-links{
+	background-color: #ff2638;
+	color: white;
+	font-size: 1.8em;
+	text-align: center;
+	text-transform: uppercase;
 	margin: 5%;
 }
 
