--- a/assets/css/other.css
+++ b/assets/css/other.css
@@ -54,8 +54,9 @@ html{
 
 #about{
 	font-family: 'Montserrat', sans-serif;
-	font-size: 1.3em;;
-	min-height: 100vh;
+	font-size: 1.4em;
+	min-height: 70vh;
+	vertical-align: center;
 }
 
 #our-story{
@@ -99,6 +100,7 @@ html{
 #whats-new{
 	min-height: 20vh;
 	background-color: black;
+	text-align: center;
 	vertical-align: center;
 }
 
@@ -109,7 +111,7 @@ html{
 	font-size: 1.8em;
 	text-align: center;
 	text-transform: uppercase;
-	margin: 5%;
+	margin: 5% 1% 5% 1%;
 }
 
 
