--- a/assets/css/other.css
+++ b/assets/css/other.css
@@ -92,13 +92,17 @@ html{
 	margin: 5%;
 }
 
+.samebutton{
+	min-width: 180px;
+}
+
 
 /* 
 *Event links
 */
 
 #whats-new{
-	min-height: 20vh;
+	/*min-height: 20vh;*/
 	background-color: #49ccf4;
 	/*background-color: black;*/
 	text-align: center;
