--- a/assets/css/other.css
+++ b/assets/css/other.css
@@ -62,6 +62,7 @@ html{
 
 #about{
 	font-family: 'Montserrat', sans-serif;
+	background-color: #353535;
 	font-size: 1.4em;
 	min-height: 70vh;
 	vertical-align: center;
@@ -69,6 +70,7 @@ html{
 
 #our-story{
 	font-size: 1em;
+	background-color: #353535;
 }
 
 
@@ -141,14 +143,14 @@ html{
 * CONTACT US
 */
 
-#contact-us-header{
+/*#contact-us-header{
 	font-size: 2.2em;
 }
 
 #contact-us-body{
 	font-size: 1.3em;
 }
-
+*/
 
 
 
